<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button_cancel_scratch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/button_cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:gravity="end"
        android:text="@string/scratch_palette"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_cancel_scratch"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_save_scratch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/button_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <ImageView
            android:id="@+id/color1_scratch"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_launcher_foreground"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/color2_scratch"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_launcher_foreground"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/color3_scratch"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_launcher_foreground"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/color4_scratch"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_launcher_foreground"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/color5_scratch"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_launcher_foreground"
            tools:ignore="ContentDescription" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pound"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editTextTextPersonName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hex"
                android:importantForAutofill="no"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/r" />

            <EditText
                android:id="@+id/editTextTextPersonName2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/rgb_val"
                android:importantForAutofill="no"
                android:inputType="text" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/g" />

            <EditText
                android:id="@+id/editTextTextPersonName3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/rgb_val"
                android:importantForAutofill="no"
                android:inputType="text" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/b" />

            <EditText
                android:id="@+id/editTextTextPersonName4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/rgb_val"
                android:importantForAutofill="no"
                android:inputType="text" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/button_save_scratch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <SeekBar
            android:id="@+id/seekBarR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="255" />
        <SeekBar
            android:id="@+id/seekBarG"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="255" />
        <SeekBar
            android:id="@+id/seekBarB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="255" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>