<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="64dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView_view_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_heading"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView_view_heading2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/view_heading2"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView_view_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/view_text1" />

        <ImageView
            android:id="@+id/imageView_view"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginTop="12dp"
            tools:ignore="ContentDescription" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>