<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/image_palette"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_choose_image"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/proxima_nova"
        android:text="@string/button_choose_image"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button_camera"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/proxima_nova"
        android:text="@string/button_camera"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_choose_image"
        app:strokeWidth="2dp" />

    <ImageView
        android:id="@+id/imageView_uploaded"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.75"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:layout_weight="1"
        android:contentDescription="@string/image_palette"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/button_cancel_image_palette"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_camera"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:layout_weight="4"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/button_save_image_palette"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView_uploaded"
        app:layout_constraintTop_toBottomOf="@+id/button_camera">

        <ImageView
            android:id="@+id/color1_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/grey2_light"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/color2_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/grey2_mid"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/color3_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/grey2_dark"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/color4_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/grey1_light"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/color5_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/grey1_dark"
            tools:ignore="ContentDescription" />
    </LinearLayout>

    <Button
        android:id="@+id/button_save_image_palette"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/proxima_nova"
        android:text="@string/button_save"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_cancel_image_palette" />

    <Button
        android:id="@+id/button_cancel_image_palette"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/proxima_nova"
        android:text="@string/button_cancel"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_save_image_palette"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeWidth="2dp" />

</androidx.constraintlayout.widget.ConstraintLayout>